--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
   width: 100%;
   margin: 0px auto;
   padding: 120px 0px;
-  
+
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
@@ -78,4 +78,8 @@ canvas {
 
   .left {
     grid-column: 6 / 12;
+  }
+
+  body{
+    color: rgb(0, 88, 81);
   }
