--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
+.stellar{
+  height: 15%;
+  width: 100%;
+}
 
+.angry{
+  height: 15%;
+  width: 100%;
+}
+
+.pet{
+  height: 15%;
+  width: 100%;
+}
 
 canvas {
   position: fixed;
@@ -53,7 +66,7 @@ canvas {
     grid-column: 2 / span 5;
     font-size: 2.5rem;
     padding: 2rem;
-    margin-bottom: var(--spacing);
+    margin-bottom: 150px;
   }
 
   section {
@@ -62,7 +75,7 @@ canvas {
     background: var(--dark-bg);
     font-size: 1.25rem;
     line-height: 1.5;
-    margin-bottom: var(--spacing);
+    margin-bottom: 150px;
   }
 
   blockquote {
@@ -80,8 +93,16 @@ canvas {
     line-height: 1;
   }
 
+  .light{
+    text-align: center;
+  }
+  ul{
+    list-style-type: none;
+  }
+
   .left {
-    grid-column: 6 / 12;
+    grid-column: 2 / 8;
+    text-align: center;
   }
 
   body{
