--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ canvas {
     font-size: 2.5rem;
     padding: 2rem;
     margin-bottom: 150px;
+    border: double 10px;
+    border-radius: 5px;
   }
 
   section {
@@ -76,6 +78,8 @@ canvas {
     font-size: 1.25rem;
     line-height: 1.5;
     margin-bottom: 150px;
+    border: double 10px;
+    border-radius: 5px;
   }
 
   blockquote {
