--- a/style.css
+++ b/style.css
@@ -99,12 +99,15 @@ canvas {
 
   .light{
     text-align: center;
+    width: 100%;
+    height: 100%;
   }
   ul{
     list-style-type: none;
   }
 
   .left {
+    margin-top: 100px;
     grid-column: 2 / 8;
     text-align: center;
   }
